--- a/style/homestyle.css
+++ b/style/homestyle.css
@@ -1,7 +1,12 @@
 body, html {
   background-color: #000000 !important;
-  height: 100%;
-  width: 100%;
+  height: 100% !important;
+  width: 100% !important;
+}
+
+iframe {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .forbesH1 {
