--- a/style/homestyle.css
+++ b/style/homestyle.css
@@ -6,7 +6,7 @@ body, html {
 
 iframe {
   width: 100% !important;
-  height: 100% !important;
+  overflow: scroll !important;
 }
 
 .forbesH1 {
@@ -25,6 +25,33 @@ iframe {
   font-size: 22px;
 }
 
+.forbesH2mobileNav {
+  font-family: alpaca_scarlett_demo;
+  color: #ffffff;
+}
+
+.bookNow {
+  font-family: alpaca_scarlett_demo;
+  color: #ffffff;
+  text-align: center !important;
+  margin-top: 20px;
+  font-size: 18px;
+  border: solid;
+  border-radius: 5px;
+  border-color: white;
+  width: 220px;
+  padding-top: 10px;
+  padding-bottom: 3px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bookNow:hover {
+  cursor: pointer;
+  color: #6C6C6C;
+  border-color: #6C6C6C;
+}
+
 @font-face {
     font-family: alpaca_scarlett_demo;
     src: url(./fonts/Alpaca_Scarlett_Demo.ttf);
@@ -37,6 +64,7 @@ iframe {
   background-color: rgb(0, 0, 0, 1);
   font-family: alpaca_scarlett_demo;
   z-index: 10;
+  display: none;
 }
 
 .banner-image {
@@ -131,4 +159,45 @@ iframe {
   float: right;
   width: 18px;
   text-align: right;
+}
+
+.topnavMobile {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+  display: none;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnavMobile #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnavMobile a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.topnavMobile a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.topnavMobile a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  color: white;
 }
