cache busting & mobile nav change to fixed position

--- a/style/homestyle.v2.css
+++ b/style/homestyle.v2.css
@@ -201,10 +201,12 @@ iframe {
 }
 
 .topnavMobile {
+  position: fixed;
   overflow: hidden;
   background-color: #333;
-  position: relative;
+  width: 100%;
   display: none;
+  z-index: 6;
 }
 
 .topnavMobile #myLinks {
